@@ -16,12 +16,17 @@ function loadBinaryResource(url) {
 onmessage = function(event) {
     var message = event.data;
     if (message.id == "downloadBookList") {
-	var content = loadBinaryResource(message.parameters[0], message.parameters[1]);
-	message = new WorkerMessage("downloadedBookList", [ content, message.callbackParameters[0], message.callbackParameters[1] ]);
+	var url = message.parameters[0];
+	var populateRemoteBookList = message.callbackParameters[0];
+	var resumeDownloads = message.callbackParameters[1];
+	var content = loadBinaryResource(url);
+	message = new WorkerMessage("downloadedBookList", [ content, populateRemoteBookList, resumeDownloads ]);
 	postMessage(message);
     } else if (message.id == "downloadMetalink") {
-	var content = loadBinaryResource(message.parameters[0], message.parameters[1]);
-	message = new WorkerMessage("downloadedMetalink", [ message.callbackParameters[0], content ]);
+	var url = message.parameters[0];
+	var id = message.callbackParameters[0];
+	var content = loadBinaryResource(url);
+	message = new WorkerMessage("downloadedMetalink", [ id, content ]);
 	postMessage(message);
     }
 };
